<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="174dp"
        android:background="@drawable/round_btn"
        android:text="Galeria"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:background="@drawable/round_btn"
        android:text="Mapa"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        android:gravity="center"
        android:text="@string/product_information"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_model_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_product_info"
        android:gravity="center"
        android:text="@string/model_not_available"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="236dp"
        android:background="@drawable/round_btn"
        android:text="Câmera"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_connection_status"
        android:layout_centerHorizontal="true"
        android:text="@string/sdk_version"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/title_activity_menu"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black_overlay"
        android:textSize="25dp"
        android:textStyle="bold" />

</RelativeLayout>
